add new label filter

--- a/my-world-map-front/src/App.css
+++ b/my-world-map-front/src/App.css
@@ -1,3 +1,7 @@
+.none-list {
+  list-style: none;
+}
+
 .none-style {
   text-decoration: none;
   color: #000000;
@@ -18,6 +22,10 @@
   align-items: center;
 }
 
+/*.postWindow:hover {
+  display: block;
+}*/
+
 .overlay {
   position: absolute;
   top: 4rem;
@@ -27,21 +35,38 @@
   padding: 0;
 }
 
+.overlay-middle {
+  position: absolute;
+  top: 5rem;
+  left: 27rem;
+  z-index: 10;
+  margin: 0;
+  padding: 0;
+}
+
+.overlay-bottom {
+  position: absolute;
+  bottom: 14rem;
+  left: 1rem;
+  z-index: 10;
+  margin: 0;
+  padding: 0;
+}
+
 .search {
   position: absolute;
   top: 3rem;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 1rem;
+  /*transform: translateX(-50%);*/
   width: 100%;
   max-width: 400px;
   z-index: 10;
 }
 
 .search input {
-  padding: 0.5rem;
-  font-size: 1.5rem;
+  padding: 0.8rem;
   width: 100%;
-  font-size: 20px;
+  font-size: 23px;
 }
 
 .locate {
@@ -61,7 +86,37 @@
 .post-filter {
   position: absolute;
   width: 100px;
-  top: 9rem;
-  left: 0.5rem;
+  top: 5rem;
+  left: 28rem;
   z-index: 13;
 }
+
+.label-button {
+  width: 100px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.label-button:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.label-button div img {
+  width: 15px;
+}
+
