--- a/my-world-map-front/src/App.css
+++ b/my-world-map-front/src/App.css
@@ -50,6 +50,14 @@ h2 {
   text-align: center;
 }
 
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  /*-ms-transform:  translateY(-50%);*/
+  transform: translateY(-50%);
+}
+
 .overlay {
   position: absolute;
   z-index: 12;
