--- a/my-world-map-front/src/App.css
+++ b/my-world-map-front/src/App.css
@@ -136,11 +136,11 @@ h2 {
 }
 
 .label-button {
-  width: 100px;
+  width: 110px;
   height: 40px;
   font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
+  /*text-transform: uppercase;*/
+  letter-spacing: 1px;
   font-weight: 500;
   color: #000;
   background-color: #fff;
@@ -187,6 +187,11 @@ h2 {
 
 .label-button div img {
   width: 15px;
+}
+
+.label-selected {
+  background-color: var(--darkRed);
+  color: #FFF;
 }
 
 .buttonDivider {
